[package]
name = "doip_rw"
version = "0.1.0"
authors = [ "Robert Jarzmik <robert.jarzmik@free.fr>"]
categories = [ "encoding", "parsing", "network-programming" ]
license = "MIT"
repository = "https://github.com/rjarzmik/doip_rw.git"
keywords = [ "network", "protocol", "serialization" ]
edition = "2021"
description = "Diagnostic over IP encoder and decoder"

[dependencies]
byteorder = { version = "1" }
thiserror = "1.0.61"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
